--- a/stylepage.css
+++ b/stylepage.css
@@ -1,3 +1,8 @@
 * {
     text-transform: capitalize ;
 }
+#myFile {
+    border: 1px solid black;
+    background-color: #ccc;
+    padding: 10px;
+  }
