--- a/stylepage.css
+++ b/stylepage.css
@@ -9,7 +9,7 @@
 
   body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #79c5de;
   }
   
   #basic {
