--- a/stylepage.css
+++ b/stylepage.css
@@ -1,22 +1,35 @@
-/* *{
-    text-transform: capitalize ;
-}
-#myFile {
-    border: 1px solid black;
-    background-color: #ccc;
-    padding: 10px;
-  } */
-
-  body {
+ body {
     font-family: Arial, sans-serif;
     background-color: #79c5de;
   }
-  
+
+/* blob {
+position: absolute;
+top: 0;
+left: 0;
+fill: #8d0a0a;
+width: 25vmax;
+z-index: -1;
+animation: move 10s ease-in-out infinite;
+transform-origin: 50% 50%;
+}
+filter: drop-shadow( 4px 3px 3px rgb(63, 18, 18));
+
+}
+@keyframes move {
+0%   { transform: scale(1)   translate(8px, -25px); }
+38%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
+40%  { transform: scale(0.8, 1) translate(80vw, 20vh) rotate(160deg); }
+78%  { transform: scale(1.3) translate(0vw, 20vh) rotate(-20deg); }
+80%  { transform: scale(1.3) translate(0vw, 20vh) rotate(-20deg); }
+100% { transform: scale(1)   translate(8px, -25px); }
+/* }   */
+
   #basic {
     width: 500px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color:#ffffff;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
   }
