--- a/resume/resume builder.css
+++ b/resume/resume builder.css
@@ -2,8 +2,8 @@
     text-transform: capitalize;
 }
 
-/* #myFile {
+#myFile {
     border: 1px solid black;
-    background-color: #c74848;
+    background-color: #f5f5f5;
     padding: 10px;
-} */
+} 
