--- a/resume/resume builder.css
+++ b/resume/resume builder.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     text-transform: capitalize;
 }
 
@@ -6,4 +6,32 @@
     border: 1px solid black;
     background-color: #f5f5f5;
     padding: 10px;
-} 
+}  */
+body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #a53f3f;
+    background-color: #b3158e;
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  
+  p {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  
+  a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
