--- a/resume/stylepage.css
+++ b/resume/stylepage.css
@@ -26,12 +26,13 @@ filter: drop-shadow( 4px 3px 3px rgb(63, 18, 18));
 /* }   */
 
   #basic {
+    
     width: 500px;
-    margin: 0 auto;
+    margin: 10 auto;
     padding: 20px;
     background-color:#ffffff;
     border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 10px rgba(240, 50, 218, 0.1);
   }
   
   h1 {
@@ -61,7 +62,7 @@ filter: drop-shadow( 4px 3px 3px rgb(63, 18, 18));
   input[type="text"], input[type="email"], input[type="tel"], textarea {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #f2ebeb;
     border-radius: 5px;
     margin-bottom: 20px;
     box-sizing: border-box;
